fix: applied dark mode

--- a/src/css/homepage-features.css
+++ b/src/css/homepage-features.css
@@ -27,9 +27,10 @@
 .box {
   width: 340px;
   height: 186px;
-  background-color: #ffffff;
+  background-color: var(--box-background);
   padding: 14px 24px;
   filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.1));
+  border-radius: 8px;
 }
 
 .box:hover {
@@ -78,7 +79,7 @@
 }
 
 .text--description {
-  color: #001f40;
+  color: var(--text-color-description);
   font-size: 14px;
   font-weight: 500;
 }
